shim/third-party/rust/vendor/erased-serde-0.3.23/tests/ui/missing-supertrait.stderr
error[E0277]: the trait bound `__T: serde::ser::Serialize` is not satisfied
 --> tests/ui/missing-supertrait.rs:5:1
  |
5 | serialize_trait_object!(MyTrait);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `__T`
  |
  = note: required for `__T` to implement `erased_serde::Serialize`
note: required by a bound in `require_erased_serialize_impl`
 --> src/private.rs
  |
  |     T: ?Sized + crate::Serialize,
  |                 ^^^^^^^^^^^^^^^^ required by this bound in `require_erased_serialize_impl`
  = note: this error originates in the macro `$crate::__internal_serialize_trait_object` which comes from the expansion of the macro `serialize_trait_object` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
  |
5 | serialize_trait_object!(MyTrait + erased_serde::__private::serde::ser::Serialize);
  |                                 ++++++++++++++++++++++++++++++++++++++++++++++++
